2002-11-12 Damien Sandras  <dsandras@seconix.com>

	* src/common.h: Added pointers needed for the stats drawing area.
	
	* src/config.cpp: Fixes to support the new tray menu system.
	
	* src/endpoint.cpp: Code cleanups.
	
	* src/gdkvideoio.cpp: Code cleanups.
	
	* src/main_window.cpp: Fixed the way the stats drawing area 
	works. Closes #98200.
	
	* src/menu.cpp: Ported the tray menu.
	
	* src/menu.h: Ported the tray menu.

	* src/tray.cpp: Ported the tray menu.

	* src/tray.h:  Ported the tray menu.
	
2002-11-10 Damien Sandras  <dsandras@seconix.com>

	* src/menu.cpp: Fixed typo.
	
2002-11-10 Damien Sandras  <dsandras@seconix.com>

	* gnomemeeting.schemas.in.in: Removed unused gconf key.
	
2002-11-10 Damien Sandras  <dsandras@seconix.com>

	* lib/Makefile.am, lib/dialog.c, src/callbacks.cpp, src/chat_window.cpp
	src/chat_window.h, src/cleaner.cpp, src/config.cpp, src/connection.cpp,
	src/druid.cpp, src/druid.h, src/endpoint.cpp, src/gatekeeper.cpp, 
	src/gnomemeeting.cpp, src/ils.cpp, src/ldap_window.cpp, 
	src/main_window.cpp, src/menu.cpp, src/menu.h, src/misc.cpp, 
	src/sound_handling.cpp, src/toolbar.cpp, src/toolbar.h, 
	src/tools.cpp, src/tray.cpp, src/urlhandler.cpp, 
	src/vfakeio.cpp, src/vfakeio.h, src/videograbber.cpp:
	Changed API of functions in toolbar.cpp, menu.cpp, and adapted the
	code so that it can compile with and without gnome.
	
2002-11-08 Damien Sandras  <dsandras@seconix.com>

	* src/main_window.cpp: Added missing include.
	
2002-11-07 Damien Sandras  <dsandras@seconix.com>

	* src/callbacks.cpp, src/cleaner.cpp, src/cleaner.h, src/common.h,
	src/config.cpp, src/config.h, src/connection.cpp, src/endpoint.cpp,
	src/endpoint.h, src/gatekeeper.cpp, src/gatekeeper.h, src/gdkvideoio.h,
	src/gnomemeeting.cpp, src/ils.cpp, src/ils.h, src/ldap_window.cpp,
	src/ldap_window.h, src/main_window.cpp, src/main_window.h, 
	src/menu.cpp, src/pref_window.cpp, src/pref_window.h,
	src/sound_handling.cpp, src/sound_handling.h, src/toolbar.cpp, 